# AdvancedProgramming

./: .gitignore  BattleshipAlgoFromFile.cpp  BattleshipAlgoFromFile.h  BattleshipAlgoInteractive.cpp  BattleshipAlgoInteractive.h  BattleshipAlgoNaive.cpp  BattleshipAlgoNaive.h  BattleshipAlgoSmart.cpp  BattleshipAlgoSmart.h  Board.cpp  Board.h  BoardBuilder.cpp  BoardBuilder.h  CMakeLists.txt  Cell.cpp  Cell.h  Debug.cpp  Debug.h  Destroyer.cpp  Destroyer.h  DummyShip.cpp  DummyShip.h  Game.cpp  Game.h  IBattleshipGameAlgo.h  PlayerAlgo.h  PlayerAlgoFactory.cpp  PlayerAlgoFactory.h  PlayerStatistics.cpp  PlayerStatistics.h  PriorityQueue.h  RocketShip.cpp  RocketShip.h  RubberShip.cpp  RubberShip.h  Ship.cpp  Ship.h  ShipFactory.cpp  ShipFactory.h  Submarine.cpp  (+9 more)
old/: BattleshipAlgoNaive.h
x64/Debug/: vc140.idb
x64/Release/: AlgoSmart.exp  AlgoSmart.iobj  AlgoSmart.lib
